--- a/hoop/UI/fr.lproj/Localizable.strings
+++ b/hoop/UI/fr.lproj/Localizable.strings
@@ -5,3 +5,9 @@
   Created by Clément on 19/12/2018.
   Copyright © 2018 hoop. All rights reserved.
 */
+
+"legals" = "En vous inscrivant, vous acceptez nos Conditions Générales d'Utilisation et notre Politique de Confidentialité";
+
+"cgu" = "Conditions Générales d'Utilisation";
+
+"conf" = "Politique de Confidentialité";
