Working with forms for parameter view

--- a/hoop/UI/fr.lproj/Localizable.strings
+++ b/hoop/UI/fr.lproj/Localizable.strings
@@ -11,3 +11,9 @@
 "cgu" = "Conditions Générales d'Utilisation";
 
 "conf" = "Politique de Confidentialité";
+
+"parameter_vc_title" = "Paramètres";
+
+"done" = "Terminer";
+
+"back" = "Retour";
